src/main/java/com/github/industrialcraft/ICLCJava/antlr/IclParser.java
// Generated from Icl.g4 by ANTLR 4.10.1

package com.github.industrialcraft.ICLCJava.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IclParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER_LITERAL=1, FLOAT_LITERAL=2, BOOL_LITERAL=3, KW_IF=4, KW_ELSE=5, 
		KW_WHILE=6, KW_FOR=7, KW_BREAK=8, KW_CONTINUE=9, KW_IMPORT=10, KW_RETURN=11, 
		KW_STATIC=12, KW_ABSTRACT=13, KW_OVERRIDE=14, KW_DO=15, KW_PUBLIC=16, 
		KW_PRIVATE=17, KW_PROTECTED=18, KW_TRY=19, KW_CATCH=20, KW_PACKAGE=21, 
		OBRACE=22, CBRACE=23, OSQBRACK=24, CSQBRACK=25, OPARAN=26, CPARAN=27, 
		ARROW=28, CAST=29, DYNCAST=30, PLUS=31, MINUS=32, MULT=33, DIV=34, MOD=35, 
		NOT=36, ORD=37, ANDD=38, OR=39, AND=40, XOR=41, PLUSQ=42, MINUSQ=43, MULTQ=44, 
		DIVQ=45, MODQ=46, ORQ=47, ANDQ=48, EQ=49, EQEQ=50, NE=51, GT=52, LT=53, 
		GE=54, LE=55, UNDERSCORE=56, DOT=57, COMMA=58, SEMI=59, COLON=60, DCOLON=61, 
		NULL=62, HASH=63, STRING_LITERAL=64, NAME=65, BCOMMENT=66, LCOMMENT=67, 
		WS=68;
	public static final int
		RULE_package_ = 0, RULE_import_ = 1, RULE_name_dcol = 2, RULE_name_dot = 3, 
		RULE_modificatorClass_ = 4, RULE_modificatorMember_ = 5, RULE_nameArgs = 6, 
		RULE_typeNameArgs = 7, RULE_type = 8, RULE_visibility = 9, RULE_method_ = 10, 
		RULE_variable_ = 11, RULE_literal = 12, RULE_operator = 13, RULE_assigns = 14, 
		RULE_compare = 15, RULE_frame = 16, RULE_frameOrInst = 17, RULE_exprInstruction = 18, 
		RULE_assignExprInstruction = 19, RULE_returnInstruction = 20, RULE_continueInstruction = 21, 
		RULE_breakInstruction = 22, RULE_ifInstruction = 23, RULE_forInstruction = 24, 
		RULE_whileInstruction = 25, RULE_instruction = 26, RULE_nullcheck = 27, 
		RULE_expr = 28, RULE_sourceFile = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"package_", "import_", "name_dcol", "name_dot", "modificatorClass_", 
			"modificatorMember_", "nameArgs", "typeNameArgs", "type", "visibility", 
			"method_", "variable_", "literal", "operator", "assigns", "compare", 
			"frame", "frameOrInst", "exprInstruction", "assignExprInstruction", "returnInstruction", 
			"continueInstruction", "breakInstruction", "ifInstruction", "forInstruction", 
			"whileInstruction", "instruction", "nullcheck", "expr", "sourceFile"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'if'", "'else'", "'while'", "'for'", "'break'", 
			"'continue'", "'import'", "'return'", "'static'", "'abstract'", "'override'", 
			"'do'", "'public'", "'private'", "'protected'", "'try'", "'catch'", "'package'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "'->'", "'=>'", "'=?>'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", "'|'", "'&'", "'^'", 
			"'+='", "'-='", "'*='", "'/='", "'%='", "'|='", "'&='", "'='", "'=='", 
			"'!='", "'>'", "'<'", "'>='", "'<='", "'_'", "'.'", "','", "';'", "':'", 
			"'::'", "'?'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTEGER_LITERAL", "FLOAT_LITERAL", "BOOL_LITERAL", "KW_IF", "KW_ELSE", 
			"KW_WHILE", "KW_FOR", "KW_BREAK", "KW_CONTINUE", "KW_IMPORT", "KW_RETURN", 
			"KW_STATIC", "KW_ABSTRACT", "KW_OVERRIDE", "KW_DO", "KW_PUBLIC", "KW_PRIVATE", 
			"KW_PROTECTED", "KW_TRY", "KW_CATCH", "KW_PACKAGE", "OBRACE", "CBRACE", 
			"OSQBRACK", "CSQBRACK", "OPARAN", "CPARAN", "ARROW", "CAST", "DYNCAST", 
			"PLUS", "MINUS", "MULT", "DIV", "MOD", "NOT", "ORD", "ANDD", "OR", "AND", 
			"XOR", "PLUSQ", "MINUSQ", "MULTQ", "DIVQ", "MODQ", "ORQ", "ANDQ", "EQ", 
			"EQEQ", "NE", "GT", "LT", "GE", "LE", "UNDERSCORE", "DOT", "COMMA", "SEMI", 
			"COLON", "DCOLON", "NULL", "HASH", "STRING_LITERAL", "NAME", "BCOMMENT", 
			"LCOMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Icl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IclParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Package_Context extends ParserRuleContext {
		public TerminalNode KW_PACKAGE() { return getToken(IclParser.KW_PACKAGE, 0); }
		public Name_dcolContext name_dcol() {
			return getRuleContext(Name_dcolContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(IclParser.SEMI, 0); }
		public Package_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_; }
	}

	public final Package_Context package_() throws RecognitionException {
		Package_Context _localctx = new Package_Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_package_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(KW_PACKAGE);
			setState(61);
			name_dcol();
			setState(62);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_Context extends ParserRuleContext {
		public TerminalNode KW_IMPORT() { return getToken(IclParser.KW_IMPORT, 0); }
		public Name_dcolContext name_dcol() {
			return getRuleContext(Name_dcolContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(IclParser.SEMI, 0); }
		public Import_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_; }
	}

	public final Import_Context import_() throws RecognitionException {
		Import_Context _localctx = new Import_Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(KW_IMPORT);
			setState(65);
			name_dcol();
			setState(66);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_dcolContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(IclParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(IclParser.NAME, i);
		}
		public List<TerminalNode> DCOLON() { return getTokens(IclParser.DCOLON); }
		public TerminalNode DCOLON(int i) {
			return getToken(IclParser.DCOLON, i);
		}
		public Name_dcolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_dcol; }
	}

	public final Name_dcolContext name_dcol() throws RecognitionException {
		Name_dcolContext _localctx = new Name_dcolContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_name_dcol);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(NAME);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DCOLON) {
				{
				{
				setState(69);
				match(DCOLON);
				setState(70);
				match(NAME);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_dotContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(IclParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(IclParser.NAME, i);
		}
		public List<TerminalNode> DOT() { return getTokens(IclParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(IclParser.DOT, i);
		}
		public Name_dotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_dot; }
	}

	public final Name_dotContext name_dot() throws RecognitionException {
		Name_dotContext _localctx = new Name_dotContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_name_dot);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(NAME);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(77);
				match(DOT);
				setState(78);
				match(NAME);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModificatorClass_Context extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(IclParser.HASH, 0); }
		public TerminalNode NOT() { return getToken(IclParser.NOT, 0); }
		public TerminalNode NAME() { return getToken(IclParser.NAME, 0); }
		public NameArgsContext nameArgs() {
			return getRuleContext(NameArgsContext.class,0);
		}
		public ModificatorClass_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modificatorClass_; }
	}

	public final ModificatorClass_Context modificatorClass_() throws RecognitionException {
		ModificatorClass_Context _localctx = new ModificatorClass_Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_modificatorClass_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(HASH);
			setState(85);
			match(NOT);
			setState(86);
			match(NAME);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPARAN) {
				{
				setState(87);
				nameArgs();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModificatorMember_Context extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(IclParser.HASH, 0); }
		public TerminalNode NAME() { return getToken(IclParser.NAME, 0); }
		public NameArgsContext nameArgs() {
			return getRuleContext(NameArgsContext.class,0);
		}
		public ModificatorMember_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modificatorMember_; }
	}

	public final ModificatorMember_Context modificatorMember_() throws RecognitionException {
		ModificatorMember_Context _localctx = new ModificatorMember_Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_modificatorMember_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(HASH);
			setState(91);
			match(NAME);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPARAN) {
				{
				setState(92);
				nameArgs();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameArgsContext extends ParserRuleContext {
		public TerminalNode OPARAN() { return getToken(IclParser.OPARAN, 0); }
		public TerminalNode CPARAN() { return getToken(IclParser.CPARAN, 0); }
		public List<TerminalNode> NAME() { return getTokens(IclParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(IclParser.NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(IclParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IclParser.COMMA, i);
		}
		public NameArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameArgs; }
	}

	public final NameArgsContext nameArgs() throws RecognitionException {
		NameArgsContext _localctx = new NameArgsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nameArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(OPARAN);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(96);
				match(NAME);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(97);
					match(COMMA);
					setState(98);
					match(NAME);
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(106);
			match(CPARAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeNameArgsContext extends ParserRuleContext {
		public TerminalNode OPARAN() { return getToken(IclParser.OPARAN, 0); }
		public TerminalNode CPARAN() { return getToken(IclParser.CPARAN, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> NAME() { return getTokens(IclParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(IclParser.NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(IclParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IclParser.COMMA, i);
		}
		public TypeNameArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeNameArgs; }
	}

	public final TypeNameArgsContext typeNameArgs() throws RecognitionException {
		TypeNameArgsContext _localctx = new TypeNameArgsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeNameArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(OPARAN);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(109);
				type();
				setState(110);
				match(NAME);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(111);
					match(COMMA);
					setState(112);
					type();
					setState(113);
					match(NAME);
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(122);
			match(CPARAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(IclParser.NAME, 0); }
		public TerminalNode NULL() { return getToken(IclParser.NULL, 0); }
		public TerminalNode AND() { return getToken(IclParser.AND, 0); }
		public TerminalNode HASH() { return getToken(IclParser.HASH, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(NAME);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NULL) {
				{
				setState(125);
				match(NULL);
				}
			}

			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AND) {
				{
				setState(128);
				match(AND);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==HASH) {
					{
					setState(129);
					match(HASH);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibilityContext extends ParserRuleContext {
		public TerminalNode KW_PUBLIC() { return getToken(IclParser.KW_PUBLIC, 0); }
		public TerminalNode KW_PROTECTED() { return getToken(IclParser.KW_PROTECTED, 0); }
		public TerminalNode KW_PRIVATE() { return getToken(IclParser.KW_PRIVATE, 0); }
		public VisibilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibility; }
	}

	public final VisibilityContext visibility() throws RecognitionException {
		VisibilityContext _localctx = new VisibilityContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_visibility);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_PUBLIC) | (1L << KW_PRIVATE) | (1L << KW_PROTECTED))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_Context extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NAME() { return getToken(IclParser.NAME, 0); }
		public TypeNameArgsContext typeNameArgs() {
			return getRuleContext(TypeNameArgsContext.class,0);
		}
		public FrameContext frame() {
			return getRuleContext(FrameContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(IclParser.SEMI, 0); }
		public List<ModificatorMember_Context> modificatorMember_() {
			return getRuleContexts(ModificatorMember_Context.class);
		}
		public ModificatorMember_Context modificatorMember_(int i) {
			return getRuleContext(ModificatorMember_Context.class,i);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public TerminalNode KW_STATIC() { return getToken(IclParser.KW_STATIC, 0); }
		public TerminalNode HASH() { return getToken(IclParser.HASH, 0); }
		public Method_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_; }
	}

	public final Method_Context method_() throws RecognitionException {
		Method_Context _localctx = new Method_Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_method_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASH) {
				{
				{
				setState(136);
				modificatorMember_();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_PUBLIC) | (1L << KW_PRIVATE) | (1L << KW_PROTECTED))) != 0)) {
				{
				setState(142);
				visibility();
				}
			}

			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_STATIC) {
				{
				setState(145);
				match(KW_STATIC);
				}
			}

			setState(148);
			type();
			setState(149);
			match(NAME);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HASH) {
				{
				setState(150);
				match(HASH);
				}
			}

			setState(153);
			typeNameArgs();
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBRACE:
				{
				setState(154);
				frame();
				}
				break;
			case SEMI:
				{
				setState(155);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_Context extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode NAME() { return getToken(IclParser.NAME, 0); }
		public TerminalNode SEMI() { return getToken(IclParser.SEMI, 0); }
		public List<ModificatorMember_Context> modificatorMember_() {
			return getRuleContexts(ModificatorMember_Context.class);
		}
		public ModificatorMember_Context modificatorMember_(int i) {
			return getRuleContext(ModificatorMember_Context.class,i);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public TerminalNode KW_STATIC() { return getToken(IclParser.KW_STATIC, 0); }
		public TerminalNode HASH() { return getToken(IclParser.HASH, 0); }
		public Variable_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_; }
	}

	public final Variable_Context variable_() throws RecognitionException {
		Variable_Context _localctx = new Variable_Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_variable_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HASH) {
				{
				{
				setState(158);
				modificatorMember_();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_PUBLIC) | (1L << KW_PRIVATE) | (1L << KW_PROTECTED))) != 0)) {
				{
				setState(164);
				visibility();
				}
			}

			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_STATIC) {
				{
				setState(167);
				match(KW_STATIC);
				}
			}

			setState(170);
			type();
			setState(171);
			match(NAME);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HASH) {
				{
				setState(172);
				match(HASH);
				}
			}

			setState(175);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(IclParser.INTEGER_LITERAL, 0); }
		public TerminalNode FLOAT_LITERAL() { return getToken(IclParser.FLOAT_LITERAL, 0); }
		public TerminalNode BOOL_LITERAL() { return getToken(IclParser.BOOL_LITERAL, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(IclParser.STRING_LITERAL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			_la = _input.LA(1);
			if ( !(((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & ((1L << (INTEGER_LITERAL - 1)) | (1L << (FLOAT_LITERAL - 1)) | (1L << (BOOL_LITERAL - 1)) | (1L << (STRING_LITERAL - 1)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
